<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sign_out"
        android:title="@string/sign_out"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete_account"
        android:title="@string/delete_account"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_support"
        android:title="@string/support"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_terms"
        android:title="@string/terms_of_service"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_privacy"
        android:title="@string/privacy_policy"
        app:showAsAction="ifRoom"/>

</menu>