<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/entry_phrases_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phrase_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/spacing_small"
            android:hint="@string/phrase">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="50"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/phrases_description"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/icon_size_normal"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/spacing_small"
            android:contentDescription="@string/help"
            android:background="?android:attr/selectableItemBackground"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_help"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/add_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_small"
        android:contentDescription="@string/new_phrase"
        android:background="?android:attr/selectableItemBackground"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_add"/>

</LinearLayout>